# Qwen-Astro

./: .env.example  .gitignore  README.md  pyproject.toml  qwen_search.py  rag.py  requirements.txt  test.ps1  test_image_upload.py  todo_list.md
backend/: app.py  config.py  models.py  old_app.py  requirements.txt  routes.py
chat-app/: index.html  package-lock.json  package.json
chat-app/src/: App.css  App.tsx  App.vue  main.tsx
chat-app/src/api/: agentApi.ts  chatApi.ts  knowledgeBaseApi.ts
chat-app/src/assets/: main.css
chat-app/src/components/: AgentCreateModal.vue  AgentSelectModal.vue  AppIcon.vue  AppSidebar.vue  ChatView.vue  CitationCard.vue  CitationContainer.vue  ImageThumbnail.vue  ItemDropdownMenu.vue  KnowledgeBaseSelectModal.vue  MainContent.tsx  MarkdownTest.vue  MessageContent.vue  SearchModal.vue  SettingsModal.tsx  SettingsModal.vue  Sidebar.tsx
chat-app/src/components/icons/: AgentsIcon.tsx  CloseIcon.tsx  DataManagementIcon.tsx  KnowledgeIcon.tsx  MicrophoneIcon.tsx  NewChatIcon.tsx  PlusIcon.tsx  SearchIcon.tsx  SendIcon.tsx  SettingsIcon.tsx  SidebarIcon.tsx  ToolIcon.tsx  index.ts
chat-app/src/components/knowledge-base/: AddKnowledgeBaseModal.vue  FileItem.vue  KnowledgeContent.vue  KnowledgeGroupList.vue  KnowledgeSearchModal.vue  WebpageItem.vue
chat-app/src/composables/: useImageUpload.ts
chat-app/src/router/: index.ts
chat-app/src/stores/: agent.ts  chat.ts  knowledgeBase.ts
chat-app/src/utils/: imageUtils.ts  markdown.ts  messageUtils.ts  pollingManager.ts
chat-app/src/views/: AgentView.vue  ChatView.vue  ImageUploadDemo.vue  ImageUploadTest.vue  KnowledgeBaseView.vue
frontend/: vite.config.js
frontend/src/views/: Home.vue
rag_engine/: __init__.py  pyproject.toml  setup.py
rag_engine/src/: agent_manager.py  components.py  config.py  conversation_manager.py  data_processor.py  group_manager.py  rag_pipeline.py  smart_chat.py  utils.py
rag_engine/src/document_parsers/: __init__.py  base_parser.py  docx_parser.py  epub_parser.py  excel_parser.py  format_detector.py  html_parser.py  markdown_parser.py  parser_factory.py  pdf_parser.py  pptx_parser.py  text_parser.py
(+1 files in other folders)
