[project]
name = "rag-project"
version = "0.1.0"
requires-python = ">=3.10, <3.11"
dependencies = [
    "chromadb>=1.0.12",
    "dotenv>=0.9.9",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "llama-index>=0.12.42",
    "llama-index-embeddings-openai-like>=0.1.1",
    "llama-index-llms-google-genai>=0.2.1",
    "llama-index-readers-web>=0.4.2",
    "llama-index-vector-stores-chroma>=0.4.2",
    "markdown>=3.8",
    "pypdf2>=3.0.1",
    "rag-engine",
    "setuptools>=80.9.0",
]

[tool.uv.sources]
rag-engine = { path = "rag_engine", editable = true }
